# algorithms

./: .gitignore  CMakeLists.txt  Makefile  README.md  algorithms.cpp
benchmark/: CMakeLists.txt  queue.cpp
benchmark/bigint/: CMakeLists.txt  bigint.cpp
benchmark/queue/: CMakeLists.txt  helpers.hpp  queue.cpp
dynamic/: bag.h
example/: CMakeLists.txt  a.out  main.cpp
geometrical/: dijkstra.h  graham.cpp  graham.h  magical_square.h
graphs/: dijkstra.cpp  find_cycle.h
include/algo/: assert.hpp  bigint.hpp  concepts.hpp  expected.hpp  fourier.hpp  misc.hpp  polynomial.hpp  string.hpp  strings.hpp
include/algo/finite_field/: bigint.hpp  concepts.hpp  field-inl.hpp  field.hpp  finite_field.hpp  number.hpp  operations.hpp  polynomial.hpp  util.hpp
include/algo/sync/: queue.hpp  thread_pool.hpp  wait_group.hpp
include/algo/util/: assert.hpp
include/helpers/: assert.hpp  concepts.hpp  expected.hpp  result.hpp
leetcode/: 3sum.cpp  743.cpp  a.out  google1.cpp  max_points_on_a_line.cpp  valid_number.cpp
prof/: bigint.h  data_parsing.ipynb  my_vector.cpp  serializer.h
sorting/: heap_sort.cpp  heap_sort.h  merge_sort.cpp  merge_sort.h  quick_sort.cpp
soul/: fun.h  linear_models.ipynb  tmp.cpp
src/finite_field/: field.cpp
src/sync/: queue.cpp  thread_pool.cpp  wait_group.cpp
strings/: format.h  kmp.h  levenstein.h
structures/: fenwick_tree.h  segment_tree.cpp  segment_tree_max.h  segment_tree_sum.h
tests/: CMakeLists.txt  bigint.cpp  field.cpp  lfqueue_ut.cpp  multiplication.cpp  number.cpp  string.cpp  test_data.txt  utils.hpp  wait_group_ut.cpp
tests/sync/: queue.cpp  thread_pool.cpp  wait_group.cpp
